--- a/Home.html
+++ b/Home.html
@@ -36,8 +36,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/23-194x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">DJ PANERGY</a>
+                        <span class="navbar-logo"><img src="assets/images/23-194x128.jpg" alt="Mobirise"></span>
+                        <a class="navbar-caption" href="Home">DJ PANERGY</a>
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Bookings">BOOK</a></li><li class="nav-item"><a class="nav-link link" href="Home#features1-6" aria-expanded="false">AVAILABLE SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Bookings">BUNDLE PACKAGES</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Home#features1-6" aria-expanded="false">AVAILABLE SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Bookings">BUNDLE PACKAGES</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/23-2000x1318.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/2312-2000x1606.png);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -185,7 +185,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/1-600x314.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/dj-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">DJ PANERGY</h4>
                         <h5 class="card-subtitle">Party Expert</h5>
@@ -198,7 +198,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/2-600x318.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/light-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Multi-coloured Lighting</h4>
                         <h5 class="card-subtitle">No two parties are the same</h5>
@@ -211,7 +211,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/3-600x320.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/smoke-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Smoke Machine</h4>
                         <h5 class="card-subtitle">Fuel the night&nbsp;</h5>
@@ -236,7 +236,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/4-600x315.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/photo-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Photo/Videography</h4>
                         <h5 class="card-subtitle">Stop trying to memorise</h5>
@@ -249,7 +249,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/5-600x314.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/ac-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Air Conditoning</h4>
                         <h5 class="card-subtitle">we got you</h5>
@@ -262,7 +262,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/6-600x308.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/secuirty-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">High Level Security</h4>
                         <h5 class="card-subtitle">we got it all under control</h5>
@@ -287,7 +287,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/7-600x320.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/bbq-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">BBQ</h4>
                         <h5 class="card-subtitle">Eat good</h5>
@@ -300,7 +300,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/8-600x309.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/clean-up-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">CLEAN UP CREW</h4>
                         <h5 class="card-subtitle">All hands on deck</h5>
@@ -313,7 +313,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/9-600x313.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mystery-600x317.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">MYSTERY BOX</h4>
                         <h5 class="card-subtitle">oooOOOOOO</h5>
@@ -334,7 +334,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">FOLLOW ME ON</h3>
+                <h3 class="mbr-section-title display-2">FOLLOW US</h3>
                 <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/kfchuk"><i class="socicon socicon-twitter"></i></a>    <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/djpanldn"><i class="socicon socicon-instagram"></i></a>      </div>
             </div>
         </div>
